--- a/formatting_assessment/notebook.ipynb
+++ b/formatting_assessment/notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
        "  'Upland']}"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +181,7 @@
        "Upland          2           0      0           0    0    0      14"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -350,7 +350,7 @@
        "Consumers     NaN         NaN    NaN         NaN  NaN  NaN     NaN        NaN"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -482,7 +482,7 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -497,10 +497,10 @@
        "Fen           1.0         0.0    0.0         0.0  1.0  2.0     0.0   0.250000\n",
        "Bog           0.0         0.0    0.0         0.0  1.0  3.0     0.0   0.750000\n",
        "Upland        2.0         0.0    0.0         0.0  0.0  0.0    14.0   0.875000\n",
-       "Consumers     NaN         NaN    NaN         NaN  NaN  NaN     NaN   0.000000"
+       "Consumers     NaN         NaN    NaN         NaN  NaN  NaN     NaN        NaN"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -514,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -524,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -645,7 +645,7 @@
        "      <td>0.2</td>\n",
        "      <td>0.6</td>\n",
        "      <td>0.875</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -670,16 +670,226 @@
        "Fen          0.250000  \n",
        "Bog          0.750000  \n",
        "Upland       0.875000  \n",
-       "Consumers    0.000000  "
+       "Consumers         NaN  "
       ]
      },
-     "execution_count": 75,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "cfm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# test eeng client table builder\n",
+    "from eeng.client.assessment import AssessmentTable\n",
+    "\n",
+    "table = AssessmentTable(\n",
+    "    filename = \"./aoi_novascotia_output_20230815_104538_122_assessment_assessment-122.geojson\"\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'cfm': [[4, 0, 1, 3, 0, 0, 0],\n",
+       "  [8, 174, 0, 7, 0, 0, 0],\n",
+       "  [3, 0, 19, 0, 3, 0, 2],\n",
+       "  [0, 0, 0, 6, 0, 0, 0],\n",
+       "  [1, 0, 0, 0, 1, 2, 0],\n",
+       "  [0, 0, 0, 0, 1, 3, 0],\n",
+       "  [2, 0, 0, 0, 0, 0, 14]],\n",
+       " 'acc': 0.8700787401574803,\n",
+       " 'pro': [0.5, 0.9206349206349206, 0.7037037037037037, 1.0, 0.25, 0.75, 0.875],\n",
+       " 'con': [0.2222222222222222, 1.0, 0.95, 0.375, 0.2, 0.6, 0.875],\n",
+       " 'labels': ['Marsh',\n",
+       "  'Open water',\n",
+       "  'Swamp',\n",
+       "  'Salt marsh',\n",
+       "  'Fen',\n",
+       "  'Bog',\n",
+       "  'Upland']}"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "table.data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Marsh</th>\n",
+       "      <th>Open water</th>\n",
+       "      <th>Swamp</th>\n",
+       "      <th>Salt marsh</th>\n",
+       "      <th>Fen</th>\n",
+       "      <th>Bog</th>\n",
+       "      <th>Upland</th>\n",
+       "      <th>Producers</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Marsh</th>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>3.000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Open water</th>\n",
+       "      <td>8.000000</td>\n",
+       "      <td>174.0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>7.000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.920635</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Swamp</th>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>19.00</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.000</td>\n",
+       "      <td>0.703704</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Salt marsh</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>6.000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Fen</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.250000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Bog</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.750000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Upland</th>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>14.000</td>\n",
+       "      <td>0.875000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Consumers</th>\n",
+       "      <td>0.222222</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.95</td>\n",
+       "      <td>0.375</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>0.6</td>\n",
+       "      <td>0.875</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               Marsh  Open water  Swamp  Salt marsh  Fen  Bog  Upland  \\\n",
+       "Marsh       4.000000         0.0   1.00       3.000  0.0  0.0   0.000   \n",
+       "Open water  8.000000       174.0   0.00       7.000  0.0  0.0   0.000   \n",
+       "Swamp       3.000000         0.0  19.00       0.000  3.0  0.0   2.000   \n",
+       "Salt marsh  0.000000         0.0   0.00       6.000  0.0  0.0   0.000   \n",
+       "Fen         1.000000         0.0   0.00       0.000  1.0  2.0   0.000   \n",
+       "Bog         0.000000         0.0   0.00       0.000  1.0  3.0   0.000   \n",
+       "Upland      2.000000         0.0   0.00       0.000  0.0  0.0  14.000   \n",
+       "Consumers   0.222222         1.0   0.95       0.375  0.2  0.6   0.875   \n",
+       "\n",
+       "            Producers  \n",
+       "Marsh        0.500000  \n",
+       "Open water   0.920635  \n",
+       "Swamp        0.703704  \n",
+       "Salt marsh   1.000000  \n",
+       "Fen          0.250000  \n",
+       "Bog          0.750000  \n",
+       "Upland       0.875000  \n",
+       "Consumers         NaN  "
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "table.get_table()"
    ]
   },
   {
