--- a/generic-pipeline/Untitled.ipynb
+++ b/generic-pipeline/Untitled.ipynb
@@ -2,32 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "initial_id",
-   "metadata": {
-    "collapsed": true,
-    "is_executing": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "execution_count": 1,
+   "id": "22624717-03a4-4b3c-99d9-744cbf40ca68",
+   "metadata": {},
    "outputs": [],
    "source": [
-    "import ee\n",
-    "\n",
-    "ee.Initialize()"
+    "import os"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8feb7acb81b1184d",
-   "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
-   },
+   "id": "3aa02bc8-2416-40ac-9087-c1bfcd97ee46",
+   "metadata": {},
    "outputs": [],
    "source": []
   }
