--- a/ee-measure-of-assocation/moa_package_testing.ipynb
+++ b/ee-measure-of-assocation/moa_package_testing.ipynb
@@ -7,14 +7,14 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2023-08-28T17:54:15.833630200Z",
-     "start_time": "2023-08-28T17:54:15.291677200Z"
+     "end_time": "2023-08-28T21:06:57.610387600Z",
+     "start_time": "2023-08-28T21:06:57.041279800Z"
     }
    },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from moa.scores import moa_scores"
+    "from moa.scores import MoaScoreGenerator"
    ]
   },
   {
@@ -38,8 +38,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-08-28T17:54:15.963535100Z",
-     "start_time": "2023-08-28T17:54:15.837142900Z"
+     "end_time": "2023-08-28T21:06:57.728015800Z",
+     "start_time": "2023-08-28T21:06:57.610387600Z"
     }
    },
    "id": "d3fa5cf51737909f"
@@ -49,16 +49,14 @@
    "execution_count": 3,
    "outputs": [],
    "source": [
-    "scores = moa_scores(\n",
-    "    df=data,\n",
-    "    label_col='class_name'\n",
-    ")\n"
+    "generator = MoaScoreGenerator(data, label_col='class_name')\n",
+    "scores_table = generator.generate_scores()\n"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-08-28T17:54:19.775622Z",
-     "start_time": "2023-08-28T17:54:17.192796900Z"
+     "end_time": "2023-08-28T21:07:00.360829200Z",
+     "start_time": "2023-08-28T21:06:57.728015800Z"
     }
    },
    "id": "9cad3d075048de26"
@@ -69,8 +67,8 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "   label  versus          predictor     score  rank\n0      1       2         Brightness  1.028825  19.0\n1      1       2       Brightness_1  0.387396  52.0\n2      1       2       Brightness_2  0.152214  63.0\n3      1       2          Elevation  0.148906  64.0\n4      1       2  GaussianCurvature  0.172444  62.0",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>label</th>\n      <th>versus</th>\n      <th>predictor</th>\n      <th>score</th>\n      <th>rank</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>1</td>\n      <td>2</td>\n      <td>Brightness</td>\n      <td>1.028825</td>\n      <td>19.0</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>1</td>\n      <td>2</td>\n      <td>Brightness_1</td>\n      <td>0.387396</td>\n      <td>52.0</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>1</td>\n      <td>2</td>\n      <td>Brightness_2</td>\n      <td>0.152214</td>\n      <td>63.0</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>1</td>\n      <td>2</td>\n      <td>Elevation</td>\n      <td>0.148906</td>\n      <td>64.0</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>1</td>\n      <td>2</td>\n      <td>GaussianCurvature</td>\n      <td>0.172444</td>\n      <td>62.0</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/plain": "   label  versus    predictor     score  rank\n0      1       2           VH  1.466157   1.0\n1      1       3       SAVI_1  1.666849   1.0\n2      1       4           VH  0.931624   1.0\n3      1       5  Greenness_2  0.735020   1.0\n4      1       6         SAVI  0.927973   1.0",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>label</th>\n      <th>versus</th>\n      <th>predictor</th>\n      <th>score</th>\n      <th>rank</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>1</td>\n      <td>2</td>\n      <td>VH</td>\n      <td>1.466157</td>\n      <td>1.0</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>1</td>\n      <td>3</td>\n      <td>SAVI_1</td>\n      <td>1.666849</td>\n      <td>1.0</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>1</td>\n      <td>4</td>\n      <td>VH</td>\n      <td>0.931624</td>\n      <td>1.0</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>1</td>\n      <td>5</td>\n      <td>Greenness_2</td>\n      <td>0.735020</td>\n      <td>1.0</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>1</td>\n      <td>6</td>\n      <td>SAVI</td>\n      <td>0.927973</td>\n      <td>1.0</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "execution_count": 4,
      "metadata": {},
@@ -78,68 +76,41 @@
     }
    ],
    "source": [
-    "scores.head()"
+    "scores_table.table.head()"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-08-28T17:54:19.807499400Z",
-     "start_time": "2023-08-28T17:54:19.775622Z"
+     "end_time": "2023-08-28T21:07:00.400367600Z",
+     "start_time": "2023-08-28T21:07:00.368339100Z"
     }
    },
-   "id": "5cae752f7a25c7ad"
+   "id": "bc3c08470a52bf53"
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "outputs": [
     {
      "data": {
-      "text/plain": "    label  versus       predictor     score  rank\n20      1       2              VH  1.466157   1.0\n17      1       3          SAVI_1  1.666849   1.0\n20      1       4              VH  0.931624   1.0\n7       1       5     Greenness_2  0.735020   1.0\n16      1       6            SAVI  0.927973   1.0\n3       1       7       Elevation  1.527829   1.0\n10      1       8              HV  1.377951   1.0\n61      2       3  c_fall_b07_20m  1.394563   1.0\n22      2       4              VV  1.843227   1.0\n22      2       5              VV  1.783006   1.0",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>label</th>\n      <th>versus</th>\n      <th>predictor</th>\n      <th>score</th>\n      <th>rank</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>20</th>\n      <td>1</td>\n      <td>2</td>\n      <td>VH</td>\n      <td>1.466157</td>\n      <td>1.0</td>\n    </tr>\n    <tr>\n      <th>17</th>\n      <td>1</td>\n      <td>3</td>\n      <td>SAVI_1</td>\n      <td>1.666849</td>\n      <td>1.0</td>\n    </tr>\n    <tr>\n      <th>20</th>\n      <td>1</td>\n      <td>4</td>\n      <td>VH</td>\n      <td>0.931624</td>\n      <td>1.0</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>1</td>\n      <td>5</td>\n      <td>Greenness_2</td>\n      <td>0.735020</td>\n      <td>1.0</td>\n    </tr>\n    <tr>\n      <th>16</th>\n      <td>1</td>\n      <td>6</td>\n      <td>SAVI</td>\n      <td>0.927973</td>\n      <td>1.0</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>1</td>\n      <td>7</td>\n      <td>Elevation</td>\n      <td>1.527829</td>\n      <td>1.0</td>\n    </tr>\n    <tr>\n      <th>10</th>\n      <td>1</td>\n      <td>8</td>\n      <td>HV</td>\n      <td>1.377951</td>\n      <td>1.0</td>\n    </tr>\n    <tr>\n      <th>61</th>\n      <td>2</td>\n      <td>3</td>\n      <td>c_fall_b07_20m</td>\n      <td>1.394563</td>\n      <td>1.0</td>\n    </tr>\n    <tr>\n      <th>22</th>\n      <td>2</td>\n      <td>4</td>\n      <td>VV</td>\n      <td>1.843227</td>\n      <td>1.0</td>\n    </tr>\n    <tr>\n      <th>22</th>\n      <td>2</td>\n      <td>5</td>\n      <td>VV</td>\n      <td>1.783006</td>\n      <td>1.0</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/plain": "['VH',\n 'SAVI_1',\n 'Greenness_2',\n 'SAVI',\n 'Elevation',\n 'HV',\n 'c_fall_b07_20m',\n 'VV',\n 'Greenness',\n 'Brightness',\n 'c_fall_b08a_20m',\n 'a_spri_b08a_20m',\n 'a_spri_b05_20m',\n 'c_fall_b06_20m',\n 'MeanCurvature',\n 'Wetness_2']"
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "scores.sort_values(by=['rank', 'label', 'versus'], ascending=True).head(10)"
+    "(scores_table.get_by_rank(1)['predictor'].unique().tolist())"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-08-28T17:57:10.249309900Z",
-     "start_time": "2023-08-28T17:57:10.232977600Z"
+     "end_time": "2023-08-28T21:08:37.169221100Z",
+     "start_time": "2023-08-28T21:08:37.153287600Z"
     }
    },
-   "id": "67fd129a6b0f7742"
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "    label  versus        predictor     score  rank\n3       7       8        Elevation  1.639595   1.0\n20      1       2               VH  1.466157   1.0\n3       6       7        Elevation  1.799827   1.0\n20      1       4               VH  0.931624   1.0\n10      6       8               HV  1.115912   1.0\n10      4       5               HV  0.681683   1.0\n29      5       6        Wetness_2  1.025077   1.0\n22      2       4               VV  1.843227   1.0\n16      1       6             SAVI  0.927973   1.0\n22      2       5               VV  1.783006   1.0\n0       3       4       Brightness  1.924116   1.0\n5       2       6        Greenness  1.906002   1.0\n22      2       8               VV  1.875021   1.0\n10      5       8               HV  1.333106   1.0\n22      2       7               VV  1.760779   1.0\n12      4       8    MeanCurvature  1.004729   1.0\n10      1       8               HV  1.377951   1.0\n3       1       7        Elevation  1.527829   1.0\n38      3       6  a_spri_b08a_20m  1.970697   1.0\n63      3       5  c_fall_b08a_20m  1.913569   1.0\n60      3       8   c_fall_b06_20m  1.929027   1.0\n17      1       3           SAVI_1  1.666849   1.0\n3       5       7        Elevation  1.552423   1.0\n3       4       7        Elevation  1.584055   1.0\n61      2       3   c_fall_b07_20m  1.394563   1.0\n34      3       7   a_spri_b05_20m  1.905465   1.0\n7       1       5      Greenness_2  0.735020   1.0",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>label</th>\n      <th>versus</th>\n      <th>predictor</th>\n      <th>score</th>\n      <th>rank</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>3</th>\n      <td>7</td>\n      <td>8</td>\n      <td>Elevation</td>\n      <td>1.639595</td>\n      <td>1.0</td>\n    </tr>\n    <tr>\n      <th>20</th>\n      <td>1</td>\n      <td>2</td>\n      <td>VH</td>\n      <td>1.466157</td>\n      <td>1.0</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>6</td>\n      <td>7</td>\n      <td>Elevation</td>\n      <td>1.799827</td>\n      <td>1.0</td>\n    </tr>\n    <tr>\n      <th>20</th>\n      <td>1</td>\n      <td>4</td>\n      <td>VH</td>\n      <td>0.931624</td>\n      <td>1.0</td>\n    </tr>\n    <tr>\n      <th>10</th>\n      <td>6</td>\n      <td>8</td>\n      <td>HV</td>\n      <td>1.115912</td>\n      <td>1.0</td>\n    </tr>\n    <tr>\n      <th>10</th>\n      <td>4</td>\n      <td>5</td>\n      <td>HV</td>\n      <td>0.681683</td>\n      <td>1.0</td>\n    </tr>\n    <tr>\n      <th>29</th>\n      <td>5</td>\n      <td>6</td>\n      <td>Wetness_2</td>\n      <td>1.025077</td>\n      <td>1.0</td>\n    </tr>\n    <tr>\n      <th>22</th>\n      <td>2</td>\n      <td>4</td>\n      <td>VV</td>\n      <td>1.843227</td>\n      <td>1.0</td>\n    </tr>\n    <tr>\n      <th>16</th>\n      <td>1</td>\n      <td>6</td>\n      <td>SAVI</td>\n      <td>0.927973</td>\n      <td>1.0</td>\n    </tr>\n    <tr>\n      <th>22</th>\n      <td>2</td>\n      <td>5</td>\n      <td>VV</td>\n      <td>1.783006</td>\n      <td>1.0</td>\n    </tr>\n    <tr>\n      <th>0</th>\n      <td>3</td>\n      <td>4</td>\n      <td>Brightness</td>\n      <td>1.924116</td>\n      <td>1.0</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>2</td>\n      <td>6</td>\n      <td>Greenness</td>\n      <td>1.906002</td>\n      <td>1.0</td>\n    </tr>\n    <tr>\n      <th>22</th>\n      <td>2</td>\n      <td>8</td>\n      <td>VV</td>\n      <td>1.875021</td>\n      <td>1.0</td>\n    </tr>\n    <tr>\n      <th>10</th>\n      <td>5</td>\n      <td>8</td>\n      <td>HV</td>\n      <td>1.333106</td>\n      <td>1.0</td>\n    </tr>\n    <tr>\n      <th>22</th>\n      <td>2</td>\n      <td>7</td>\n      <td>VV</td>\n      <td>1.760779</td>\n      <td>1.0</td>\n    </tr>\n    <tr>\n      <th>12</th>\n      <td>4</td>\n      <td>8</td>\n      <td>MeanCurvature</td>\n      <td>1.004729</td>\n      <td>1.0</td>\n    </tr>\n    <tr>\n      <th>10</th>\n      <td>1</td>\n      <td>8</td>\n      <td>HV</td>\n      <td>1.377951</td>\n      <td>1.0</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>1</td>\n      <td>7</td>\n      <td>Elevation</td>\n      <td>1.527829</td>\n      <td>1.0</td>\n    </tr>\n    <tr>\n      <th>38</th>\n      <td>3</td>\n      <td>6</td>\n      <td>a_spri_b08a_20m</td>\n      <td>1.970697</td>\n      <td>1.0</td>\n    </tr>\n    <tr>\n      <th>63</th>\n      <td>3</td>\n      <td>5</td>\n      <td>c_fall_b08a_20m</td>\n      <td>1.913569</td>\n      <td>1.0</td>\n    </tr>\n    <tr>\n      <th>60</th>\n      <td>3</td>\n      <td>8</td>\n      <td>c_fall_b06_20m</td>\n      <td>1.929027</td>\n      <td>1.0</td>\n    </tr>\n    <tr>\n      <th>17</th>\n      <td>1</td>\n      <td>3</td>\n      <td>SAVI_1</td>\n      <td>1.666849</td>\n      <td>1.0</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>5</td>\n      <td>7</td>\n      <td>Elevation</td>\n      <td>1.552423</td>\n      <td>1.0</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>4</td>\n      <td>7</td>\n      <td>Elevation</td>\n      <td>1.584055</td>\n      <td>1.0</td>\n    </tr>\n    <tr>\n      <th>61</th>\n      <td>2</td>\n      <td>3</td>\n      <td>c_fall_b07_20m</td>\n      <td>1.394563</td>\n      <td>1.0</td>\n    </tr>\n    <tr>\n      <th>34</th>\n      <td>3</td>\n      <td>7</td>\n      <td>a_spri_b05_20m</td>\n      <td>1.905465</td>\n      <td>1.0</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>1</td>\n      <td>5</td>\n      <td>Greenness_2</td>\n      <td>0.735020</td>\n      <td>1.0</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "scores[scores['rank'] == 1]"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-08-28T17:55:41.777023600Z",
-     "start_time": "2023-08-28T17:55:41.755485800Z"
-    }
-   },
-   "id": "d3af80ca3d24dc81"
+   "id": "6e9fe60673b0a536"
   },
   {
    "cell_type": "code",
@@ -149,7 +120,7 @@
    "metadata": {
     "collapsed": false
    },
-   "id": "93e2d7ca9e66523e"
+   "id": "912c62e0d0d9c035"
   }
  ],
  "metadata": {
